fix: page width on small devices

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,13 +24,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
   line-height: 1.5;
   margin: 0;
-  padding: 0 20px;
+  padding: 1rem 20px;
   display: grid;
+  grid-template-columns: minmax(0, var(--page-width));
   grid-gap: 20px;
-  position: relative;
+  justify-content: center;
   width: 100%;
-  margin: 0 auto;
-  max-width: var(--page-width);
 }
 
 ::selection, ::-moz-selection {
@@ -83,7 +82,7 @@ pre {
 }
 
 footer {
-  margin: 4rem 0 2rem;
+  margin-top: 4rem;
   font-size: .8rem;
   color: var(--light);
   address {
@@ -119,7 +118,6 @@ nav {
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
-  margin-top: 1rem;
 
   a {
     text-decoration: none;
@@ -164,8 +162,9 @@ blockquote {
   margin: 2rem;
 
   img {
-    max-width: calc(100% + 4rem + 40px);
-    margin: 0 calc(-2rem - 20px) .4rem;
+    max-width: 100%;
+    max-height: 400px;
+    margin: 0 auto;
     display: block;
   }
 
